manifests/overlay/test/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rmit-app-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
    - host: test.rmit.testing.hava.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:  
              service:
                name: rmit-demo-service
                port: 
                  number: 8080
